--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </Iframe>
     <form style="background-position: center;" aria-setsize="40%">
       <label for="Email">Email</label><br>
-      <input type="email">
+      <input type="email"><br>
       <label for="pwd">Password</label><br>
-      <input type="password">
-      <label for="cbTOS">TOS</label>
-      <input type="checkbox">
+      <input type="password"><br>
+      <label for="cbTOS">TOS</label><br>
+      <input type="checkbox"><br>
 
       <input type="button">
 
