added usless button

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
       <input type="email"><br>
       <label for="pwd">Password</label><br>
       <input type="password"><br>
-      <label for="cbTOS">TOS</label><br>
+      <label for="cbTOS">Terms Of Service </label>
       <input type="checkbox"><br>
 
-      <input type="button">
+      <button style="background-color: brown;">
+        Confirm
+
+      </button>
 
 
     </form>
