--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
   <head>
     <title> this webpage does not work</title>
+    <div id="rcorners2:"></div> {
+      border-radius: 25px;
+      border: 2px solid #73AD21;
+      padding: 20px;
+      width: 200px;
+      height: 150px;
+
+    }
   
   </head>
   <body>
     <button> Click this for nothing to happen</button>
-    <Iframe aria-setsize="100" src="https://github.com/battlequestAAA/zuiiv/tree/main">
 
-    </Iframe>
-    <form style="background-position: center;" aria-setsize="40%">
+    <form style="background-position: center;" aria-setsize="40%" border-radius="2rem">
       <label for="Email">Email</label><br>
       <input type="email"><br>
       <label for="pwd">Password</label><br>
