--- a/index.html
+++ b/index.html
@@ -2,34 +2,28 @@
 <html>
   <head>
     <title> this webpage does not work</title>
-    <div id="rcorners2:"></div> {
-      border-radius: 25px;
-      border: 2px solid #73AD21;
-      padding: 20px;
-      width: 200px;
-      height: 150px;
-
-    }
   
   </head>
   <body>
     <button> Click this for nothing to happen</button>
 
-    <form style="background-position: center;" aria-setsize="40%" border-radius="2rem">
-      <label for="Email">Email</label><br>
-      <input type="email"><br>
-      <label for="pwd">Password</label><br>
-      <input type="password"><br>
-      <label for="cbTOS">Terms Of Service </label>
-      <input type="checkbox"><br>
+    <div>
+     <form action="src/routes/+page.svelte" style="background-color: azure;>
+        <label for="Email">Email</label><br>
+        <input type="email"><br>
+        <label for="pwd">Password</label><br>
+        <input type="password"><br>
+        <label for="cbTOS">Terms Of Service </label>
+        <input type="checkbox"><br>
 
-      <button style="background-color: brown;">
-        Confirm
+        <button style="background-color: brown;">
+          Confirm
 
-      </button>
+        </button>
 
 
-    </form>
+      </form>
+    </div>
   
   </body>
 </html>
