fixed the submit button i think

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> this webpage does not work</title>
+    <style></style>
   
   </head>
   <body>
@@ -16,10 +17,7 @@
         <label for="cbTOS">Terms Of Service </label>
         <input type="checkbox"><br>
 
-        <button style="background-color: brown;">
-          Confirm
-
-        </button>
+        <input type="submit" value="Submit">
 
 
       </form>
