--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <div>
      <form action="src/routes/+page.svelte" style="background-color: azure;>
+
         <label for="Email">Email</label><br>
-        <input type="email"><br>
+        <input type="email" required><br>
         <label for="pwd">Password</label><br>
-        <input type="password"><br>
+        <input type="password" required><br>
         <label for="cbTOS">Terms Of Service </label>
-        <input type="checkbox"><br>
+        <input type="checkbox" required><br>
 
         <input type="submit" value="Submit">
 
