--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
      <form action="src/routes/+page.svelte" style="background-color: azure;>
 
-        <label for="Email">Email</label><br>
+        <label for="email">Email</label><br>
         <input type="email" required><br>
         <label for="pwd">Password</label><br>
         <input type="password" required><br>
