--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
   </head>
   <body>
+    <h>Any inquaries please email Customer Service: customerservice@zuiiv.shop</h>
     <button> Click this for nothing to happen</button>
 
     <div>
