--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <title> this webpage does not work</title>
     <style></style>
+
+    <style></style>
   
   </head>
   <body>
-    <h>Any inquaries please email Customer Service: customerservice@zuiiv.shop</h>
     <button> Click this for nothing to happen</button>
 
-    <div>
+    <div style="background-color: black;">
      <form action="src/routes/+page.svelte" style="background-color: azure;>
 
         <label for="email">Email</label><br>
@@ -23,6 +24,8 @@
 
 
       </form>
+
+      <h style="color: aliceblue;">Any inquaries please email Customer Service: customerservice@zuiiv.shop</h><br><br>
     </div>
   
   </body>
