does this work?

--- a/workaround.html
+++ b/workaround.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
     <head>
         <script>
-
+            type="text/javascript">document.domain = 'statusdashboard.com';
+        </script>
+        <script>
+            var ifr = document.getElementById( Main );
+            var ifrDoc = ifr.contentDocument || ifr.contentWindow.document;
         </script>
     </head>
 
     <body>
         <div>
-            <iframe>
-
-            </iframe>
+            <iframe id="Main" src="https://advancedhealthandcare.statusdashboard.com/" style="border:0px #ffffff none;" scrolling="no" height="100%" width="100%" allowfullscreen></iframe>
         </div>
 
         <div>
