--- a/workaround.html
+++ b/workaround.html
@@ -15,6 +15,10 @@
         </div>
 
         <div>
+            <link rel="import" href="https://advancedhealthandcare.statusdashboard.com/">
+        </div>
+
+        <div>
             <p>test</p>
         </div>
 
