maybe now it worky

--- a/workaround.html
+++ b/workaround.html
@@ -4,7 +4,7 @@
         <script type="text/javascript">
             document.domain = 'statusdashboard.com';
         </script>
-        <script>
+        <script type="text/javascript">
             window.onload = function() {
                 var ifr = document.getElementById('Main');
                 var ifrDoc = ifr.contentDocument || ifr.contentWindow.document;
