--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
       <h style="color: aliceblue;">Any inquaries please email Customer Service: customerservice@zuiiv.shop</h><br><br>
     </div>
+
+    <div>
+      <object data="https://advancedhealthandcare.statusdashboard.com/" 
+        type="text/html" width="600" height="400">
+      </object>
+      
+    </div>
   
   </body>
 </html>
